@@ -1,5 +1,10 @@
 2014-10-31  Ola Jeppsson  <ola@adapteva.com>
 
+	* scripts/build_and_test_all.sh: Fix segfault on exit in trap
+	handler. Don't try to test examples when cross compiling.
+
+2014-10-31  Ola Jeppsson  <ola@adapteva.com>
+
 	* Create 2014.11 branch
 
 2014-10-31  Ola Jeppsson  <ola@adapteva.com>
